<resources>
    <string name="app_name">TrainWithMe</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offers">Offers</string>
    <string name="locations">Locations</string>
    <string name="sport_image">Sport image</string>
    <string name="sports">Sports</string>
    <string name="trainers">Trainers</string>
    <string name="objects">Objects</string>
    <string name="where_to_train">Where to train?</string>
    <string name="location">Location</string>
    <string name="sport">Sport</string>
    <string name="date">Date</string>
    <string name="search">Search</string>
    <string name="e_g_soccer_surfing">e.g. soccer, surfing …</string>
    <string name="training_location">training location</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="trainer_photo">Trainer photo</string>
    <string name="image_slide">image slide</string>

    <string-array name="sort_options">
        <item>By opinions</item>
        <item>By price</item>
    </string-array>

    <string-array name="filter_options">
        <item>All offers</item>
        <item>5 stars</item>
        <item>min. 4 stars</item>
        <item>min. 3 stars</item>
    </string-array>

    <string name="sport_discipline">Sport</string>
    <string name="duration">Duration</string>
    <string name="upcoming_trainings">Upcoming trainings</string>
    <string name="my_passes">My passes</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="more_info_button">More info button</string>
    <string name="sign_in">Sign in</string>
    <string name="no_account_yet_register_here">No account yet? <u>Register here</u></string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="phone">Phone</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="link_to_profile_photo">Link to profile photo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_error">Login error</string>

    <string name="no_opinions_yet">No opinions yet, give the first one!</string>
    <string name="opinions_singular_plural">opinion(s)</string>
    <string name="no_sports">No sport offers available</string>
    <string name="and">and</string>
    <string name="more">more</string>
    <string name="loading">Loading</string>
    <string name="unknown_error">Unknown error occurred</string>
    <string name="null_data_error">Loaded data is null</string>
    <string name="choose_sport">Choose sport</string>
    <string name="dollars_per_hour">$/h</string>
    <string name="centre_photo">Centre photo</string>
    <string name="selected">Selected</string>
    <string name="training_proposal_sent_message">Training proposal was successfully sent. You will be informed about trainer\'s feedback</string>
    <string name="ok">OK</string>
</resources>
